[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/Enemies/BasicEnemy copy.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Enemies/BaseEnemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.40456
height = 10.7683

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.48575, 10.8563 )

[sub_resource type="CircleShape2D" id=3]
radius = 14.0

[sub_resource type="Animation" id=4]
resource_name = "WalkingLeft"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "WalkingUp"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "WalkingUp"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "WalkingLeft"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "WalkingRight"

[sub_resource type="AnimationNodeBlendSpace2D" id=10]
blend_point_0/node = SubResource( 7 )
blend_point_0/pos = Vector2( 0, -2 )
blend_point_1/node = SubResource( 8 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 9 )
blend_point_2/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -2 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=11]
states/Walking/node = SubResource( 10 )
states/Walking/position = Vector2( 520, 119.5 )
start_node = "Walking"

[sub_resource type="AnimationNodeStateMachinePlayback" id=12]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
health = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.6057, 7.28999 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 9
frame = 4

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
modulate = Color( 1, 1, 0, 0.796078 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
show_behind_parent = true
monitorable = false
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
modulate = Color( 1, 0, 1, 0.901961 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/WalkingLeft = SubResource( 4 )
anims/WalkingRight = SubResource( 5 )
anims/WalkingUp = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 11 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 12 )
parameters/Walking/blend_position = Vector2( 0, 0 )

[node name="AttackRateTimer" type="Timer" parent="."]

[node name="DamagedTween" type="Tween" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="timeout" from="AttackRateTimer" to="." method="_on_AttackRateTimer_timeout"]
